클래스 상수 제거 리팩터링